# Competa

./: .gitignore  CONTRIBUTING.md  README.md  ai-competitive-analysis-agent-dev-plan-55841a.md  phase1-skeleton-and-protocols-55841a.md  start-dev.bat  start-dev.ps1  task.md  功能文档.txt  提交文档参考.md
.githooks/: commit-msg  pre-commit
backend/: .env.example  README.md  competa.db-shm  competa.db-wal  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  analyst.py  base.py  collector.py  fieldwork.py  interview.py  qa.py  survey.py  writer.py
backend/app/api/: reports.py  router.py  sse.py  tasks.py  traces.py
backend/app/db/: session.py
backend/app/demo/: __init__.py  routes.py  scenarios.py
backend/app/graph/: __init__.py  builder.py  state.py
backend/app/guardrails/: __init__.py  redact.py  report_validator.py  schema_enforcer.py  validator.py
backend/app/harness/: __init__.py  capability.py  context.py  governance.py  runtime.py  surface.py
backend/app/llm/: __init__.py  adapter.py  client.py  mock_client.py  openai_llm.py  prompts.py
backend/app/models/: database.py
backend/app/orchestration/: __init__.py  constraint_resolver.py  graph.py  runner.py  state.py
backend/app/schemas/: __init__.py  agent.py  base.py  competitive.py  handoff.py  ratchet.py  report.py  survey.py  trace.py
backend/app/services/: curation.py  evaluation.py  export.py  screenshot.py  search.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_run.py  test_constraint_resolver.py  test_db_session.py  test_filter_and_dag.py  test_graph.py  test_guardrails.py  test_llm.py  test_llm_client.py  test_runner.py  test_schema_enforcer.py  test_schemas.py  test_search.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  (+2 more)
(+25 files in other folders)
