[project]
name = "competa-backend"
version = "0.1.0"
description = "AI-driven competitive analysis agent collaboration system - Backend"
readme = "README.md"
authors = [
    { name = "nhy", email = "23373226@buaa.edu.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "langgraph>=0.4.0",
    "openai>=1.60.0",
    "tavily-python>=0.5.0",
    "ddgs>=8.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
